# micro-transformer-openmp

./: .gitignore  CMakeLists.txt  Makefile  README.md  analyze_16threads.py  build.ps1
include/: transformer.h
src/: attention.cpp  benchmark.cpp  encoder.cpp  layers.cpp  main.cpp  matrix.cpp
tests/: benchmark_results_1755423478.csv
